# ChangeLog for x11-themes/gtk-engines-qtcurve
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.5 2007/10/17 14:27:54 beandog Exp $

*gtk-engines-qtcurve-0.55.0 (17 Oct 2007)

  17 Oct 2007; Steve Dibb <beandog@gentoo.org>
  +gtk-engines-qtcurve-0.55.0.ebuild:
  Version bump, bug 180112

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

*gtk-engines-qtcurve-0.48.4 (07 Apr 2007)

  07 Apr 2007; Stefan Schweizer <genstef@gentoo.org>
  +gtk-engines-qtcurve-0.48.4.ebuild:
  version bump thanks to Ben de Groot <ben@berkano.net> in bug 171197 and bugday

*gtk-engines-qtcurve-0.47 (09 Mar 2007)

  09 Mar 2007; Steve Dibb <beandog@gentoo.org>
  +gtk-engines-qtcurve-0.47.ebuild:
  version bump

  06 Mar 2007; Steve Dibb <beandog@gentoo.org>
  gtk-engines-qtcurve-0.46.4.ebuild:
  drop untested sparc keyword
