@@ -1,0 +1,3 @@
+MD5 0d5eeb45990c3ecf060daa68a2ed2e6f QtCurve-Gtk2-0.55.1.tar.bz2 85587
+RMD160 44d371854a7955ad776981a4a851e3e47079b39e QtCurve-Gtk2-0.55.1.tar.bz2 85587
+SHA256 57054336a93fdf974815080c62c386b92558e670ed837ffc49f165a5774cffea QtCurve-Gtk2-0.55.1.tar.bz2 85587
