@@ -1,6 +1,12 @@
 # ChangeLog for x11-themes/gtk-engines-qtcurve
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.5 2007/10/17 14:27:54 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-qtcurve/ChangeLog,v 1.6 2007/12/02 18:10:43 drac Exp $
+
+*gtk-engines-qtcurve-0.55.1 (02 Dec 2007)
+
+  02 Dec 2007; Samuli Suominen <drac@gentoo.org>
+  +gtk-engines-qtcurve-0.55.1.ebuild:
+  Version bump, using cmake-utils.
 
 *gtk-engines-qtcurve-0.55.0 (17 Oct 2007)
 
